--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -365,7 +365,11 @@
 		position: absolute;
 		right: 4px;
 		top: 50%;
-		z-index: 99999;
+		transition: $transition;
+
+		&:hover {
+			color: $nyred-color;
+		}
 
 		@include sm {
 			padding: 0 0 0 8px;
@@ -390,11 +394,8 @@
 	}
 }
 
-.touch .modify-pages .lfr-nav-sortable > a > span {
-	padding-left: 28px;
-}
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+@media only screen and (max-device-width: 480px) {
 	#banner #navigationCollapse #navigation .portlet .portlet-body > .navbar {
 		margin-bottom: 5%;
 	}
@@ -407,5 +408,13 @@
 
 	#banner .lfr-nav-item .lfr-nav-child-toggle {
 		position: relative;
+	}
+}
+
+/* XS Screen Sizes < 320px */
+
+@media only screen and (max-device-width: 320px) {
+	.touch .modify-pages .lfr-nav-sortable > a > span {
+		padding-left: 0;
 	}
 }
